Get rid of manual smart quotes.

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -123,7 +123,7 @@ didn&#8217;t work, which was often, we started over from scratch.</p>
 <p>At the back of the stack of pages was a real monster: a program that
 took up several dense pages of code. It took a while before we worked
 up the courage to even try it, but it was irresistable: the title
-above the listing was &ldquo;Tunnels and Trolls.&rdquo; We had no idea
+above the listing was &#8220;Tunnels and Trolls.&#8221; We had no idea
 what it did, but it sounded like a game, and what could be cooler than
 a computer game that you programmed yourself?</p>
 <p>We never did get it running, and after a year we moved out of that
@@ -148,8 +148,8 @@ instead of a programming one.</p>
 
 <p>At first, the challenge was just getting something on screen. Now it
 became figuring out how to write programs bigger than would fit in my
-head. Instead of just reading about &ldquo;How to Program in
-C++,&rdquo; I started trying to find books about how to <em>organize</em>
+head. Instead of just reading about &#8220;How to Program in
+C++,&#8221; I started trying to find books about how to <em>organize</em>
 programs.</p>
 <p>Fast-forward several years and a <span name="friend">new friend</span> hands me a book: <em>Design
 Patterns: Elements of Reusable Object-Oriented Software</em>. Finally! The
@@ -192,7 +192,7 @@ deadlines, on platforms where every CPU cycle counted. They did the
 best they could, and as I gradually realized, their best was often
 very good. The more time I spent working on game code, the more bits
 and pieces of absolute brilliance I found hiding under the surface.</p>
-<p>Unfortunately, &ldquo;hiding&rdquo; was often a good description.
+<p>Unfortunately, &#8220;hiding&#8221; was often a good description.
 There were gems buried in the code, but many people walked right over
 them. I watched coworkers struggle to reinvent good solutions when
 examples of exactly what they needed were nestled in the same codebase
@@ -214,7 +214,7 @@ that will let you build an elegant and maintainable structure out of a
 few simple parts. Use them to frame the house, then crack open those
 other books to build it out.</p>
 <p>It&#8217;s easy to <span name="tragedy">underappreciate</span> this. After all, friends won&#8217;t look at
-your home and say, &ldquo;Wow, nice wiring!&rdquo; But without it, I
+your home and say, &#8220;Wow, nice wiring!&#8221; But without it, I
 can guarantee they will notice when you flip the lightswitch and your
 beautiful chandelier doesn&#8217;t turn on.</p>
 <aside name="tragedy">
@@ -222,16 +222,16 @@ beautiful chandelier doesn&#8217;t turn on.</p>
 <p>This is the tragedy of software architecture: the better it is, the
 less it&#8217;s noticed. All people will notice are the features that were
 enabled by it. As the Tao Te Ching says: <em>When the Sage&#8217;s work is
-done, the people say, &ldquo;We did it all by ourselves!&rdquo;</em></p>
+done, the people say, &#8220;We did it all by ourselves!&#8221;</em></p>
 </aside>
 
 <h2><a href="#how-it-relates-to-design-patterns" name="how-it-relates-to-design-patterns">How it Relates to Design Patterns</a></h2>
-<p>Any programming book with &ldquo;Patterns&rdquo; in its name clearly
+<p>Any programming book with &#8220;Patterns&#8221; in its name clearly
 bears a relationship to the classic <em>Design Patterns: Elements of
 Reusable Object-Oriented Software</em> by Erich Gamma, Richard Helm, Ralph
-Johnson and John Vlissides (ominously called the &ldquo;Gang of
-Four&rdquo;).</p>
-<p>By calling this book &ldquo;Game Programming Patterns,&rdquo; I
+Johnson and John Vlissides (ominously called the &#8220;Gang of
+Four&#8221;).</p>
+<p>By calling this book &#8220;Game Programming Patterns,&#8221; I
 certainly don&#8217;t intend to imply that the Gang of Four&#8217;s book is
 <span name="nongames">inapplicable</span> to games. On the contrary: Part Two of this book revisits
 many of the patterns first described in <em>Design Patterns</em>, but with an
@@ -296,7 +296,7 @@ most out of them.</p>
 grouped into several themes. Each theme describes two opposing forces
 encountered when building a game. The patterns within that theme are
 tools you can use to find a balance between those forces.</p>
-<p>For example, the &ldquo;Communicating&rdquo; theme is for patterns
+<p>For example, the &#8220;Communicating&#8221; theme is for patterns
 that enable parts of a game to communicate with each other. The
 primary force is that game objects <em>must</em> interact: bullets must
 collide with enemies, the hero must be able to play heroic sounds. The
