--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -800,7 +800,7 @@ class and its descendants, like so:</p>
     allowing the entire codebase to have access to the same
     service, we can avoid random places in code instantiating
     their own providers because they can&#8217;t get to the
-    &ldquo;real&rdquo; one.</p>
+    &#8220;real&#8221; one.</p>
 </li>
 <li>
 <p><em>We lose control over where and when the service is used.</em>
