--- a/html/component.html
+++ b/html/component.html
@@ -224,10 +224,10 @@ the rendering code without running into the
 <span name="diamond">Deadly Diamond</span>.</p>
 <aside name="diamond">
 
-<p>The &ldquo;Deadly Diamond&rdquo; occurs in class hierarchies with
+<p>The &#8220;Deadly Diamond&#8221; occurs in class hierarchies with
 multiple inheritance where there are two different paths to the same
 base class. The pain that causes is a bit out of the scope of this
-book, but just understand that they named it &ldquo;deadly&rdquo; for
+book, but just understand that they named it &#8220;deadly&#8221; for
 a reason.</p>
 </aside>
 
@@ -265,17 +265,17 @@ original monolithic class becomes a <strong>container</strong> class that is a
 shell for these components.</p>
 <aside name="component">
 
-<p>&ldquo;Component&rdquo;, like &ldquo;Object&rdquo;, is one of those
+<p>&#8220;Component&#8221;, like &#8220;Object&#8221;, is one of those
 words that means everything and nothing in programming. Because of
 that, it&#8217;s been used to describe a few concepts. In business software,
-there&#8217;s a &ldquo;Component&rdquo; design pattern that describes
+there&#8217;s a &#8220;Component&#8221; design pattern that describes
 decoupled services that communicate over the web.</p>
 <p>I tried to find a different name for this unrelated pattern found in
-games, but &ldquo;Component&rdquo; seems to be the most common term
+games, but &#8220;Component&#8221; seems to be the most common term
 for it. Since design patterns are about documenting existing
 practices, I don&#8217;t have the luxury of coining a new term. So,
 following in the footsteps of XNA, Delta3D, and others,
-&ldquo;Component&rdquo; it is.</p>
+&#8220;Component&#8221; it is.</p>
 </aside>
 
 <h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
@@ -298,14 +298,14 @@ This pattern can be put to good use when any of these is true:</p>
 </ul>
 <h2><a href="#keep-in-mind" name="keep-in-mind">Keep in Mind</a></h2>
 <p>This pattern adds a good bit of complexity over simply making a class
-and putting code in it. Each conceptual &ldquo;object&rdquo; becomes a
+and putting code in it. Each conceptual &#8220;object&#8221; becomes a
 cluster of objects that must be instantiated, initialized, and
 correctly wired together. Communication between the different
 components becomes more challenging, and controlling how they occupy
 memory is more complex.</p>
 <p>For a large codebase, this complexity may be worth it for the
 decoupling and code reuse it enables, but take care to ensure you
-aren&#8217;t over-engineering a &ldquo;solution&rdquo; to a non-existent
+aren&#8217;t over-engineering a &#8220;solution&#8221; to a non-existent
 problem before applying this pattern.</p>
 <p>Another consequence of using components is that you often have to hop
 through a level of indirection to get anything done. Given the
@@ -343,12 +343,12 @@ going for.</p>
 <p>I should point out that using the actual name of the character in the
 codebase is usually a bad idea. The marketing department has an
 annoying habit of demanding name changes days before you ship.
-&ldquo;Focus tests show males between 11 and 15 respond negatively to
-&lsquo;Bj&oslash;rn&rsquo;. Use &lsquo;Sven&rsquo; instead.&rdquo;</p>
+&#8220;Focus tests show males between 11 and 15 respond negatively to
+&lsquo;Bj&oslash;rn&rsquo;. Use &lsquo;Sven&rsquo; instead.&#8221;</p>
 <p>This is why many software projects use internal-only codenames. Well,
 that and because it&#8217;s more fun to tell people you&#8217;re working on
-&ldquo;Big Electric Cat&rdquo; than just &ldquo;the next version of
-Photoshop.&rdquo;</p>
+&#8220;Big Electric Cat&#8221; than just &#8220;the next version of
+Photoshop.&#8221;</p>
 </aside>
 
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">Bjorn</span>
@@ -549,7 +549,7 @@ Not much:</p>
 components that actually define it, and it holds the state that is
 shared across multiple domains. Position and velocity are still in the
 core <code>Bjorn</code> class for two reasons. First, they are
-&ldquo;pan-domain&rdquo; state: almost every component will make use
+&#8220;pan-domain&#8221; state: almost every component will make use
 of them, so it isn&#8217;t clear which component <em>should</em> own them if we did
 want to push them down.</p>
 <p>Secondly, and more importantly, it gives us an easy way for the
@@ -633,7 +633,7 @@ for it to use, like so:</p>
 <code>InputComponent</code> interface. We pay a price for this: <code>update()</code> is now
 a virtual method call, which is a little slower. What do we get in
 return for this cost?</p>
-<p>Most consoles require a game to support &ldquo;demo mode.&rdquo; If
+<p>Most consoles require a game to support &#8220;demo mode.&#8221; If
 the player sits at the main menu without doing anything, the game will
 start playing automatically, with the computer standing in for the
 player. This keeps the game from burning the main menu into your TV,
@@ -672,9 +672,9 @@ strange, but it&#8217;s stuff like this that gets me up in the <span name="coffe
 
 <h3><a href="#no-bj&oslash;rn-at-all" name="no-bj&oslash;rn-at-all">No Bj&oslash;rn at all?</a></h3>
 <p>If you look at our <code>Bjorn</code> class now, you&#8217;ll notice there&#8217;s nothing
-really &ldquo;Bj&oslash;rn&rdquo; about it&thinsp;&mdash;&thinsp;it&#8217;s just a
+really &#8220;Bj&oslash;rn&#8221; about it&thinsp;&mdash;&thinsp;it&#8217;s just a
 component bag. In fact, it looks like a pretty good candidate for a
-base &ldquo;game object&rdquo; class that we can use for <em>every</em>
+base &#8220;game object&#8221; class that we can use for <em>every</em>
 object in the game. All we need to do is pass in <em>all</em> the components,
 and we can build any kind of object just by picking and choosing parts
 like Dr. Frankenstein.</p>
@@ -779,7 +779,7 @@ different components, we can create all of the different kinds of
 objects our game needs.</p>
 <h2><a href="#design-decisions" name="design-decisions">Design Decisions</a></h2>
 <p>The most important design question you&#8217;ll need to answer with this
-pattern is &ldquo;What set of components do I need?&rdquo; The answer
+pattern is &#8220;What set of components do I need?&#8221; The answer
 there is going to depend on the needs and genre of your game. The
 bigger and more complex your engine is, the more finely you&#8217;ll likely
 want to slice your components.</p>
@@ -833,7 +833,7 @@ ideal, but doesn&#8217;t really work in practice. The fact that these
 components are part of the <em>same</em> object implies that they are part of
 a larger whole and need to coordinate. That means communication.</p>
 <p>So how can the components talk to each other? There are a couple of
-options, but unlike most design &ldquo;alternatives&rdquo; in this
+options, but unlike most design &#8220;alternatives&#8221; in this
 book, these aren&#8217;t exclusive: you will likely support more than one at
 the same time in your designs.</p>
 <ul>
@@ -1040,7 +1040,7 @@ has&thinsp;&mdash;&thinsp;things like position and size.</p>
 animation and rendering, user input and AI, physics and collision. If
 you have separate components for each half of those pairs, you may
 find it easiest to just let them know directly about their other half.</p>
-<p>Messaging is useful for &ldquo;less important&rdquo; communication.
+<p>Messaging is useful for &#8220;less important&#8221; communication.
 Its fire-and-forget nature is a good fit for things like having an
 audio component play a sound when a physics component sends a message
 that the object has collided with something.</p>
@@ -1072,7 +1072,7 @@ communication paths if you need them.</p>
     pattern. Both patterns are about taking part of an object&#8217;s
     behavior and delegating it to a separate subordinate object. The
     difference is that with the strategy pattern, the separate
-    &ldquo;strategy&rdquo; object is usually stateless&thinsp;&mdash;&thinsp;it
+    &#8220;strategy&#8221; object is usually stateless&thinsp;&mdash;&thinsp;it
     encapsulates an algorithm but no data. It defines <em>how</em> an object
     behaves but not <em>what</em> it is.</p>
 <p>Components are a bit more self-important. They often hold state
