--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
 </head>
 <body class="index">
 <div class="page">
@@ -15,7 +15,7 @@
 
 <div class="sign-up">
   <h2>Want to read it on paper/eBook?</h2>
-  <p>I'm working on those now! Join the mailing list and I'll tell you when they're ready:</p>
+  <p>I&#8217;m working on those now! Join the mailing list and I&#8217;ll tell you when they&#8217;re ready:</p>
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
@@ -25,7 +25,7 @@
   </form>
   </div>
   <!--End mc_embed_signup-->
-  <p><small>(I post less than once a month. Don't worry, I won't spam you.)</small></p>
+  <p><small>(I post less than once a month. Don&#8217;t worry, I won&#8217;t spam you.)</small></p>
 </div>
 
 <h2>Table of Contents</h2>
@@ -86,19 +86,19 @@
   <li>Find it harder to make changes as your codebase grows?</li>
   <li>Feel like your game is a giant hairball where everything is intertwined with everything else?</li>
   <li>Wonder if and how design patterns apply to games?</li>
-  <li>Hear things like "cache coherency" and "object pools", but don't know how to use them to make your game faster?</li>
+  <li>Hear things like &#8220;cache coherency&#8221; and &#8220;object pools&#8221;, but don&#8217;t know how to use them to make your game faster?</li>
 </ul>
 </div>
 
-<p>I'm here to help! I wrote this book, <em>Game Programming Patterns</em>, to address just those questions. It's a collection of patterns I found in games to make code cleaner, easier to understand, and faster.</p>
+<p>I&#8217;m here to help! I wrote this book, <em>Game Programming Patterns</em>, to address just those questions. It&#8217;s a collection of patterns I found in games to make code cleaner, easier to understand, and faster.</p>
 
-<h2>It's Free and Online!</h2>
+<h2>It&#8217;s Free and Online!</h2>
 
 <p>This is the book I wish I had when I started making games, and I want you to have it now!</p>
 
 <div class="narrow-sign-up sign-up">
   <h2>Want to read it on paper/eBook?</h2>
-  <p>I'm working on those now! Join the mailing list and I'll tell you when they're ready:</p>
+  <p>I&#8217;m working on those now! Join the mailing list and I&#8217;ll tell you when they&#8217;re ready:</p>
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
@@ -108,7 +108,7 @@
   </form>
   </div>
   <!--End mc_embed_signup-->
-  <p><small>(I post less than once a month. Don't worry, I won't spam you.)</small></p>
+  <p><small>(I post less than once a month. Don&#8217;t worry, I won&#8217;t spam you.)</small></p>
 </div>
 
 <a class="start-reading" href="introduction.html">Start Reading!</a>
@@ -177,13 +177,13 @@
 
 <img src="images/dogshot.jpg" class="profile" />
 
-<p>I'm Bob Nystrom. I started writing this book while working at Electronic Arts. In my eight years there, I saw a lot of beautiful code, and a lot of really horrendous code. My hope was that I could take what I learned from the beautiful stuff, write it down here, and then show it to the people writing the awful stuff to get them to stop.</p>
+<p>I&#8217;m Bob Nystrom. I started writing this book while working at Electronic Arts. In my eight years there, I saw a lot of beautiful code, and a lot of really horrendous code. My hope was that I could take what I learned from the beautiful stuff, write it down here, and then show it to the people writing the awful stuff to get them to stop.</p>
 
-<p>If you want to get in touch with me, you can email <tt>bob</tt> at this site or just ask me (<a href="https://twitter.com/intent/user?screen_name=munificentbob"><tt>@munificentbob</tt></a>) on twitter.
+<p>If you want to get in touch with me, you can email <code>bob</code> at this site or just ask me (<a href="https://twitter.com/intent/user?screen_name=munificentbob"><code>@munificentbob</code></a>) on twitter.
 
 <h2>Have Feedback?</h2>
 
-<p>Part of the magic of writing a book online is that it's easy to change. If you find mistakes or have suggestions, please don't hesitate to <a href="https://github.com/munificent/game-programming-patterns/issues">file a bug</a> or send me a pull request.</p>
+<p>Part of the magic of writing a book online is that it&#8217;s easy to change. If you find mistakes or have suggestions, please don&#8217;t hesitate to <a href="https://github.com/munificent/game-programming-patterns/issues">file a bug</a> or send me a pull request.</p>
 
 <p class="footer">&copy; 2009-2014 Robert Nystrom</p>
 </div>
